# cpp-template

./: .gitignore  CMakeLists.txt  README.md
App/: CMakeLists.txt
App/src/: main.cpp
Benchmarks/: CMakeLists.txt  core_benchmark.cpp
Core/: CMakeLists.txt
Core/include/: core.h
Core/include/core/: core.h
Core/src/: core.cpp
Tests/: CMakeLists.txt  tests.cpp
